--- a/index.html
+++ b/index.html
@@ -1086,8 +1086,7 @@
                 <div class="t m1 x4 h3 y7 ff1 fs2 fc0 sc0 ls1 ws0">an additional large location!</div>
                 <div class="t m2 x5 h4 y8 ff3 fs3 fc1 sc0 ls2 ws1">718.635.<span class="_ _1"></span>1673</div>
                 <div class="t m3 x6 h5 y9 ff4 fs4 fc0 sc0 ls1 ws0">718.596.<span class="_ _2"></span>3632<span
-                        class="ff1"> Babies, T<span class="_ _1"></span>ots, Nursery<span class="_ _0"></span>,
-                        Kindergarten</span></div>
+                        class="ff1"> Babies, T<span class="_ _1"></span>ots, Nursery, Kindergarten<span class="_ _0"></span>
                 <div class="t m0 x7 h6 ya ff1 fs5 fc0 sc0 ls3 ws2">ADDRESS:MYR<span class="_ _1"></span>TLEA<span
                         class="_ _1"></span>VEM<span class="_ _0"></span>YR<span class="_ _1"></span>TLEA<span
                         class="_ _1"></span>VE</div>
