--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebsiteTitle</title>
+    <title>Sunny Tots</title>
     <link rel="icon" href="https://raw.githubusercontent.com/sunnytots/sunnytots.github.io/refs/heads/main/favicon.ico"
         type="image/x-icon">
     <style>
